// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MetricBar should render 1`] = `
<div>
  <div
    class="metric-bar-root"
  >
    <div
      class="bar bar-default"
      style="width: 0%;"
    />
  </div>
</div>
`;

exports[`MetricBar should render full MetricBar 1`] = `
<div>
  <div
    class="metric-bar-root"
  >
    <div
      class="bar bar-default"
      style="width: 100%;"
    />
  </div>
</div>
`;

exports[`MetricBar should render small MetricBar 1`] = `
<div>
  <div
    class="metric-bar-root"
  >
    <div
      class="bar bar-sm"
      style="width: 0%;"
    />
  </div>
</div>
`;
